--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -21,6 +21,24 @@
   color: #09d3ac;
 }
 
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #fff;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300italic,400italic");
 
 /*
@@ -3024,9 +3042,10 @@
 		#header input[type="reset"],
 		#header input[type="button"],
 		#header .button {
-			background-color: transparent;
+			background-color:#6495ed;
 			box-shadow: inset 0 0 0 2px #999;
 			color: #fff;
+      border: 0;
 		}
 
 			#header input[type="submit"]:hover,
