--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -110,12 +110,22 @@
 .buttonBox{
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: stretch;
-  padding: 0 !important;
+  padding: 0px!important;
 }
 .buttonIndex{
-  border: 0 !important;
+	background-color: #6495ed;
+    border: 0;
+    color: #ffffff;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 400;
+    height: 2em;
+    text-align: center;
+    text-decoration: none;
+    white-space: nowrap;
+  border: 0px !important;
 }
 .dropdown {
   position: relative;
@@ -128,7 +138,7 @@
   background-color: #fff;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  padding: 12px 16px;
+  padding: 12px 12px;
   z-index: 1;
 }
 
